$Id$
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

        
        Configuration files for Examples Doxygen documentation
     ----------------------------------------------------------
                    
                    
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

06/06/14 P.Gumplinger (doxygen-V10-00-00)
- Updated Doxyfile, Doxymodules_category.h adding new
  exoticphysics channeling and ucn examples

29/11/12 I.Hrivnacova (doxygen-V09-06-01)
- Updated configuration files for 10.0 release

17/11/12 I.Hrivnacova (doxygen-V09-06-00)
- Updated configuration files for 10.0 release

26/11/12 I.Hrivnacova (doxygen-V09-05-02)
- Updated Doxyfile for removing .README.HowToRunTestEm1

26/11/12 I.Hrivnacova (doxygen-V09-05-01)
- Completed extended examples

27/06/12 I.Hrivnacova (doxygen-V09-05-00)
- First tag on Doxygen configuration files which now included
  extended examples in the generated documentation.
  See README file how to process to generate complete examples
  (basic & extended) documentation.


