@@ -10,48 +10,6 @@
  *  @{
  */
 
-/** @defgroup extended_analysis_A01 A01
- *  Analysis example A01 
- *  @ingroup extended_analysis
- *  @{
- */
-
-  class A01AnalysisManager {};
-  class A01CellParameterisation {};
-  class A01DetectorConstMessenger {};
-  class A01DetectorConstruction {};
-  class A01DriftChamber {};
-  class A01DriftChamberHit {};
-  class A01EmCalorimeter {};
-  class A01EmCalorimeterHit {};
-  class A01EMPhysics {};
-  class A01EventAction {};
-  class A01EventActionMessenger {};
-  class A01GeneralPhysics {};
-  class A01HadCalorimeter {};
-  class A01HadCalorimeterHit {};
-  class A01HadronPhysics {};
-  class A01Hodoscope {};
-  class A01HodoscopeHit {};
-  class A01IonPhysics {};
-  class A01MagneticField {};
-  class A01MagneticFieldMessenger {};
-  class A01MuonPhysics {};
-  class A01PhysicsList {};
-  class A01PrimaryGeneratorAction {};
-  class A01PrimaryGeneratorMessenger {};
-
-/** @} */
-
-/** @defgroup extended_analysis_shared shared
- *  The shared analysis classes have their
- *  <a href="../html_analysis_shared/html/index.html">standalone documentation </a>
- *  @ingroup extended_analysis
- *  @{
- */
-
-/** @} */
-
 /** @defgroup extended_analysis_AnaEx01 AnaEx01
  *  Analysis AnaEx01 example has its 
  *  <a href="../html_AnaEx01/html/index.html">standalone documentation </a>
