@@ -27,13 +27,10 @@
   class DicomPhantomParameterisationColour {};
   class DicomPhantomZSliceHeader {};
   class DicomPhantomZSliceMerged {};
-  class DicomPhysicsList {};
   class DicomPrimaryGeneratorAction {};
   class DicomRegularDetectorConstruction {};
   class DicomRunAction {};
   class DicomRun {};
-
-/** @} */
 
 /** @} */
 
@@ -82,5 +79,74 @@
 
 /** @} */
 
+/** @defgroup extended_medical_dna dna
+ *  Extended examples medical dna classes
+ *  @{
+ */
+
+/** @defgroup extended_medical_dna_chem1 chem1
+ *  Medical dna chem1 example has its
+ *  <a href="../html_chem1/html/index.html">standalone documentation </a>
+ *  @ingroup extended_medical_dna
+ *  @{
+ */
+
+/** @} */
+
+/** @defgroup extended_medical_dna_chem2 chem2
+ *  Medical dna chem1 example has its
+ *  <a href="../html_chem2/html/index.html">standalone documentation </a>
+ *  @ingroup extended_medical_dna
+ *  @{
+ */
+
+/** @} */
+
+/** @defgroup extended_medical_dna_chem3 chem3
+ *  Medical dna chem1 example has its
+ *  <a href="../html_chem3/html/index.html">standalone documentation </a>
+ *  @ingroup extended_medical_dna
+ *  @{
+ */
+
+/** @} */
+
+/** @defgroup extended_medical_dna_dnaphysics dnaphysics
+ *  Medical dna dnaphysics example has its
+ *  <a href="../html_dnaphysics/html/index.html">standalone documentation </a>
+ *  @ingroup extended_medical_dna
+ *  @{
+ */
+
+/** @} */
+
+/** @defgroup extended_medical_dna_microdosimetry microdosimetry
+ *  Medical dna microdosimetry example has its
+ *  <a href="../html_microdosimetry/html/index.html">standalone documentation </a>
+ *  @ingroup extended_medical_dna
+ *  @{
+ */
+
+/** @} */
+
+/** @defgroup extended_medical_dna_pdb4dna pdb4dna
+ *  Medical dna pdb4dna example has its
+ *  <a href="../html_pdb4dna/html/index.html">standalone documentation </a>
+ *  @ingroup extended_medical_dna
+ *  @{
+ */
+
+/** @} */
+
+/** @defgroup extended_medical_dna_wholeNuclearDNA wholeNuclearDNA
+ *  Medical dna wholeNuclearDNA example has its
+ *  <a href="../html_wholeNuclearDNA/html/index.html">standalone documentation </a>
+ *  @ingroup extended_medical_dna
+ *  @{
+ */
+
+/** @} */
+
+/** @} */
 
 /** @} */
