@@ -18,6 +18,9 @@ track of all tags.
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
 
+12/11/14 I.Hrivnacova (doxygen-V10-00-01)
+- Updated configuration files for 10.1 release
+
 06/06/14 P.Gumplinger (doxygen-V10-00-00)
 - Updated Doxyfile, Doxymodules_category.h adding new
   exoticphysics channeling and ucn examples
